Fix z-index bugs

--- a/src/app/product/_product.component.desktop.scss
+++ b/src/app/product/_product.component.desktop.scss
@@ -7,6 +7,7 @@
   padding: 25px;
   background: rgba(255, 255, 255, 0.95);
   border-radius: 10px;
+  z-index: 1000;
 }
 
 img {
