--- a/src/app/user-profile/_user-profile.component.desktop.scss
+++ b/src/app/user-profile/_user-profile.component.desktop.scss
@@ -5,6 +5,7 @@
   top: 0;
   left: 0;
   margin-top: 56px;
+  z-index: 1050;
 }
 
 .top-user-profile-wrapper {
